module4-task3 вдохнуть жизнь

--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -8,7 +8,7 @@ block content
         h2.visually-hidden Основное содержание
         .post__wrapper
           .post__head
-            a.post__backwards.button.button--backwards(href='#') Назад
+            a.post__backwards.button.button--backwards(href='javascript:history.back()') Назад
             time.post__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
             h2.post__title.title.title--main AirPods в один клик
             ul.post__themes.themes
