--- a/src/express/templates/edit-post.pug
+++ b/src/express/templates/edit-post.pug
@@ -5,15 +5,15 @@ block content
     section
       .popup.popup--new-publication.popup--anti
         .new-publication
-          form(method='POST')
+          form(action='#' method='POST')
             .new-publication__header
-              h1 Новая публикация
+              h1 Редактирование публикации
               .new-publication__date-form
                 h3 Дата публикации
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
-                    input#new-publication-date(type='text' name='createdDate' placeholder='2021-03-21')
+                    input#new-publication-date(type='text' name='date' placeholder=article.createdDate)
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             a.popup__button.button.button--popup-close(href='javascript:history.back()' aria-label='Закрыть окно')
               | Закрыть
@@ -22,25 +22,25 @@ block content
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text' name='title' placeholder='Заголовок' value=title required='')
+                    input(type='text' name='title' placeholder='Заголовок' value=article.title required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text' name='photo' value='' placeholder='Фотография' readonly='')
+                    input#image-name-field(type='text' name='photo' value='moya_mashinka.jpg' placeholder='Фотография' readonly='')
                   .form__image-loader.form__image-loader--publication
                     label
                       input.visually-hidden(type='file' name='upload')
                       | Обзор
                   button.button.button--transparent Удалить
                 .new-publication__category-wrapper
-                  each category,index in categories
+                  each category, index in categories
                     .new-publication__checkbox.new-publication__checkbox--auto
-                      input(type='checkbox' name='category[]' value=category id='checkbox-auto-' + index)
-                      label(for='checkbox-auto-' + index) #{category}
+                      input(id='checkbox-auto' + index type='checkbox' name='category[]' value=category checked=(article ? article.category.includes(category) : false))
+                      label(for='checkbox-auto' + index) #{category}
                   a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='5' name='announce' placeholder='Анонс публикации')
+                    textarea(rows='5' name='announcement' placeholder='Анонс публикации') #{article.announce}
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='10' name='fullText' placeholder='Полный текст публикации')
+                    textarea(rows='10' name='full-text' placeholder='Полный текст публикации') #{article.fullText}
