--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -1,5 +1,5 @@
 header.header
-        a.header__logo.logo(href='#')
+        a.header__logo.logo(href='/')
           img.logo__image(src='/img/icons/logo-image-only.svg' alt='логотип Тайпотеки')
           span.logo__name Типотека
         nav.header__nav
@@ -8,4 +8,4 @@ header.header
               a.header__registration(href='#') Регистрация
             li.header__list-item
               a.header__enter(href='#') Вход с паролем
-        a.header__search.button.button--search(href='#' aria-label='поиск по сайту')
+        a.header__search.button.button--search(href='/search' aria-label='поиск по сайту')
