--- a/src/express/templates/search.pug
+++ b/src/express/templates/search.pug
@@ -3,10 +3,18 @@ extends layout.pug
 block content
   main
     section.search-page
-      .search-page__wrapper
+      div(class=`search-page__wrapper${(!result.length && searchQuery) ? ' search-page__wrapper--empty' : ''}`)
         h1 Поиск
         .search.search-page__form
-          form(action='#' method='get')
+          form(method='get')
             label
-              input(type='text' name='search' placeholder='Что ищем?')
+              input(type='text' name='search' placeholder='Что ищем?' value=`${searchQuery ? searchQuery : ''}`)
             button.search__button.button.button--transparent(type='submit') Найти
+          each article in result
+            .search__result
+              time.search__date(datetime=article.createdDate) #{article.createdDate}
+              a.search__link #{article.title}
+        if (!result.length && searchQuery)
+          p.search-page__empty Ничего не нашлось
+
+
