--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -1,6 +1,11 @@
 extends layout.pug
 
 block content
+  -
+    const formatDate = (dateString) => {
+      const date = new Date(dateString);
+      return date.toLocaleString();
+    }
   main.main-page
     h1.visually-hidden Главная страница личного блога Типотека
     p
@@ -8,34 +13,11 @@ block content
     section.main-page__theme-list
       h2.visually-hidden Список тем
       ul.themes
-        li.themes__item
-          a.themes__item-link(href='#')
-            | Автомобили
-            sup 88
-        li.themes__item
-          a.themes__item-link(href='#')
-            | Удаленная работа
-            sup 13
-        li.themes__item
-          a.themes__item-link(href='#')
-            | Бизнес
-            sup 13
-        li.themes__item
-          a.themes__item-link(href='#')
-            | Путешествия
-            sup 13
-        li.themes__item
-          a.themes__item-link.themes__item-link--padding(href='#')
-            | Дизайн и обустройство
-            sup 13
-        li.themes__item
-          a.themes__item-link(href='#')
-            | Производство игрушек
-            sup 22
-        li.themes__item
-          a.themes__item-link(href='#')
-            | UX & UI
-            sup 22
+        each category in categories
+          li.themes__item
+            a.themes__item-link(href='/articles/category/' + category.id)
+              | #{category.name}
+              sup #{category.count}
     .main-page__section-flex
       section.main-page__hot.hot
         h2.hot__name
@@ -92,15 +74,15 @@ block content
       h2.visually-hidden Список превью статей
       ul.preview__list
         each article in articles
-          li.preview__item
+          li.preview__item.preview__item--noimage
             ul.preview__breadcrumbs
-              each category in article.category.slice(0, 5)
+              each category in article.categories.slice(0, 4)
                 li.preview__breadcrumbs-item
-                  a.preview__breadcrumbs-link(href='/categories/') #{category}
+                  a.preview__breadcrumbs-link(href='/articles/category/' + category.id) #{category.name}
             if article.image
               .preview__background
                 img.preview__background-image(src='img/skyscraper@1x.jpg' width='460' height='240' srcset='img/skyscraper@1x.jpg 1x, img/skyscraper@2x.jpg 2x' alt='Фотография небоскреба')
-            time.preview__time(datetime=article.createdDate) #{article.createdDate}
+            time.preview__time(datetime=article.createdAt) #{formatDate(article.createdAt)}
             h3.preview__name
               a.preview__name-link(href='/articles/' + article.id) #{article.title}
             p.preview__text #{article.announce}
