--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -1,3 +1,32 @@
+mixin pagination(page, totalPages, width, prefix)
+  -
+    let start = page - width;
+    let end = page + width;
+
+    if(start < 1){
+      end += 1 - start;
+      start = 1;
+    }
+    if(end > totalPages){
+      start -= end - totalPages;
+      end = totalPages;
+    }
+
+    if(start < 1){
+      start = 1;
+    }
+    let i = start - 1
+
+  ul.preview__pagination.pagination
+      if start > 1
+        li
+          a.pagination__button.button.button--backwards(href=`${prefix}page=${page - 1}`) Назад
+      while i++ < end
+        li.pagination__item(class={'pagination__item--active': i === page})
+          a(href=`${prefix}page=${i}`)= i
+      if end < totalPages
+        li
+          a.pagination__button.button.button--forward(href=`${prefix}page=${page + 1}`) Вперёд
 doctype html
 html(lang='ru')
     head
