--- a/src/express/templates/edit-post.pug
+++ b/src/express/templates/edit-post.pug
@@ -17,11 +17,12 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
-                    input#new-publication-date(type='text' name='date' placeholder=article.createdAt)
+                    input#new-publication-date(type='text' name='createdDate' placeholder=article.createdAt)
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             a.popup__button.button.button--popup-close(href='javascript:history.back()' aria-label='Закрыть окно')
               | Закрыть
               | окно
+            +insertErrorMessage(validationMessages)
             .new-publication__form.form
               .form__wrapper.form__wrapper--intro
                 .form__field
