--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -17,6 +17,23 @@ mixin pagination(page, totalPages, width, prefix)
     }
     let i = start - 1
 
+style.
+  .server-error-wrap {
+    color: white;
+    background-color: tomato;
+    border-radius: 10px;
+    margin: 20px 0 0;
+  }
+  .server-error-item {
+    padding: 10px;
+  }
+
+mixin insertErrorMessage(messages)
+  if messages
+    .server-error-wrap
+      each message in messages
+        .server-error-item= message
+
   ul.preview__pagination.pagination
       if start > 1
         li
