--- a/src/express/templates/articles-by-category.pug
+++ b/src/express/templates/articles-by-category.pug
@@ -10,21 +10,19 @@ block content
     h1 #{category.name}
     section.articles-category__theme-list
       h2.visually-hidden Список тем
-      ul.themes
-        each item in categories
-          li.themes__item
-            a.themes__item-link(href=`/articles/category/${item.id}` class=item.id === category.id ? "themes__item-link--active" : "")
-              | #{item.name}
-              sup #{item.count}
+      include partials/themes
     section.articles-category__list.preview
       h2.visually-hidden Список превью статей
       ul.preview__list
         each article in category.articles
-          li.preview__item.preview__item--noimage
+          li.preview__item(class=article.image ? '' : 'preview__item--noimage')
             ul.preview__breadcrumbs
               each cat in article.categories.slice(0, 4)
                 li.preview__breadcrumbs-item
                   a.preview__breadcrumbs-link(href='/articles/category/' + cat.id) #{cat.name}
+            if article.image
+              .preview__background
+                img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.title)
             time.preview__time(datetime=article.createdAt) #{formatDate(article.createdAt)}
             h3.preview__name
               a.preview__name-link(href='/articles/' + article.id) #{article.title}
