--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -12,12 +12,7 @@ block content
       | Это приветственный текст, который владелец блога может выбрать, чтобы описать себя 👏
     section.main-page__theme-list
       h2.visually-hidden Список тем
-      ul.themes
-        each category in categories
-          li.themes__item
-            a.themes__item-link(href='/articles/category/' + category.id)
-              | #{category.name}
-              sup #{category.count}
+      include partials/themes
     .main-page__section-flex
       section.main-page__hot.hot
         h2.hot__name
@@ -74,14 +69,14 @@ block content
       h2.visually-hidden Список превью статей
       ul.preview__list
         each article in articles
-          li.preview__item.preview__item--noimage
+          li.preview__item(class=article.image ? '' : 'preview__item--noimage')
             ul.preview__breadcrumbs
               each category in article.categories.slice(0, 4)
                 li.preview__breadcrumbs-item
                   a.preview__breadcrumbs-link(href='/articles/category/' + category.id) #{category.name}
             if article.image
               .preview__background
-                img.preview__background-image(src='img/skyscraper@1x.jpg' width='460' height='240' srcset='img/skyscraper@1x.jpg 1x, img/skyscraper@2x.jpg 2x' alt='Фотография небоскреба')
+                img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.title)
             time.preview__time(datetime=article.createdAt) #{formatDate(article.createdAt)}
             h3.preview__name
               a.preview__name-link(href='/articles/' + article.id) #{article.title}
