--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -33,10 +33,11 @@ block content
             each comment in article.comments
               li.comments__comment
                 .comments__avatar.avatar
-                  img(src='/img/avatar-1.png' alt='аватар пользователя')
+                  if comment.users.avatar
+                    img(src=`/img/${comment.users.avatar}` alt='аватар пользователя')
                 .comments__text
                   .comments__head
-                    p Тест тестович •
+                    p #{comment.users.name} #{comment.users.surname} •
                     time.comments__date(datetime=comment.createdAt) #{formatDate(comment.createdAt)}
                   p.comments__message #{comment.text}
           .comments__footer.comments__footer--user
