--- a/src/express/templates/sign-up.pug
+++ b/src/express/templates/sign-up.pug
@@ -5,12 +5,12 @@ block content
     h1.visually-hidden Регистрация пользователя
     section
       .popup.popup--registration.popup--anti
-        a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
+        a.popup__button.button.button--popup-close(aria-label='Закрыть окно' onclick="history.back(-1)")
           | Закрыть
           | окно
         h2.popup__title Регистрация
         .popup__form.popup__form--active.form.form--register
-          form(action='#' method='get')
+          form(action='/register' method='post' enctype='multipart/form-data')
             .form__field
               label
                 input(type='email' name='email' placeholder='Электронная почта' required='')
@@ -19,22 +19,18 @@ block content
                 input(type='text' name='name' placeholder='Имя' required='')
             .form__field
               label
-                input(type='text' name='surname' placeholder='Фамилия')
+                input(type='text' name='surname' placeholder='Фамилия' required='')
             .form__field
               label
                 input(type='password' name='password' placeholder='Пароль' required='')
             .form__field
               label
                 input(type='password' name='repeat-password' placeholder='Повтор пароля' required='')
-            .form__validation-error
-              p.form__error-message При регистрации произошли ошибки:
-              ul.form__errors
-                li.form__error Пароль не может состоять из двух букв
-                li.form__error Фамилия не должна быть смешной
+            +registerErrorMessage(validationMessages)
             .form__image-loader
               a.form__avatar.avatar
-                img(src='img/icons/smile.svg' alt='аватар пользователя')
+                img(src='img/icons/smile.svg' alt='аватар пользователя' class='registredImg')
               label
-                input.visually-hidden(type='file' name='upload')
+                input.visually-hidden(type='file' name='avatar' class='registredAvatar')
                 | Загрузить фото профиля
             button.form__submit-btn.form__submit-btn--register.button.button--colored(type='submit') Зарегистрироваться
