--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -9,8 +9,8 @@ block content
           each comment in article.comments
             li.publication__list-item
               .publication__header
-                img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
-                b.publication__list-name Александр Петров
+                img.publication__list-image(src=`/img/${comment.users.avatar}` width='20' height='20' alt='Аватар пользователя')
+                b.publication__list-name #{comment.users.name} #{comment.users.surname}
                 time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
               a.publication__item-text(href='#')
                 | #{comment.text}
