--- a/src/express/templates/edit-post.pug
+++ b/src/express/templates/edit-post.pug
@@ -25,6 +25,7 @@ block content
             +insertErrorMessage(validationMessages)
             .new-publication__form.form
               .form__wrapper.form__wrapper--intro
+                input(type="hidden" name="_csrf" value=csrfToken)
                 .form__field
                   label
                     input(type='text' name='title' placeholder='Заголовок' value=article.title required='')
