--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -41,6 +41,10 @@ mixin registerErrorMessage(messages)
       ul.form__errors
         each message in messages
           li.form__error= message
+mixin commentErrorMessage(messages)
+  if messages
+    each message in messages
+      p.comments__error= message
 
   ul.preview__pagination.pagination
       if start > 1
