--- a/src/express/templates/login.pug
+++ b/src/express/templates/login.pug
@@ -5,17 +5,18 @@ block content
     h1.visually-hidden Регистрация пользователя
     section
       .popup.popup--registration.popup--anti
-        a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
+        a.popup__button.button.button--popup-close(aria-label='Закрыть окно' onclick="history.back(-1)")
           | Закрыть
           | окно
         h2.popup__title Войти
         .popup__form.form.form--log-in
-          form(action='#' method='get')
+          form(action='/login' method='post')
+            input(type="hidden" name="_csrf" value=csrfToken)
             .form__field
               label
                 input(type='email' name='email' placeholder='Электронная почта' required='')
             .form__field
               label
                 input(type='password' name='password' placeholder='Пароль' required='')
-            p.form__error-message Некоторая ошибка произошла, беда!
+            +insertErrorMessage(validationMessages)
             button.form__submit-btn.form__submit-btn--log-in.button.button--colored(type='submit') Войти
