--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -9,7 +9,7 @@ block content
   main.main-page
     h1.visually-hidden Главная страница личного блога Типотека
     p
-      | Это приветственный текст, который владелец блога может выбрать, чтобы описать себя 👏
+      | Добро пожаловать на самый интересный блог 👏
     section.main-page__theme-list
       h2.visually-hidden Список тем
       include partials/themes
