--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -40,10 +40,23 @@ block content
                     p #{comment.users.name} #{comment.users.surname} •
                     time.comments__date(datetime=comment.createdAt) #{formatDate(comment.createdAt)}
                   p.comments__message #{comment.text}
-          .comments__footer.comments__footer--user
-            form(action='#' method='POST')
-              .comments__avatar.avatar
-                img(src='/img/avatar-2.png' alt='аватар пользователя')
-              label
-                textarea(rows='1' name='message' placeholder='Присоединиться к обсуждению')
-              button.comments__button.button.button--colored(type='submit') Опубликовать
+          if user
+            .comments__footer.comments__footer--user
+              form(action=`/articles/${article.id}/comments` method='POST')
+                input(type="hidden" name="_csrf" value=csrfToken)
+                .comments__avatar.avatar
+                  img(src=`/img/${user.avatar}` alt='аватар пользователя')
+                label
+                  textarea(rows='1' name='message' placeholder='Присоединиться к обсуждению')
+                button.comments__button.button.button--colored(type='submit') Опубликовать
+              +commentErrorMessage(validationMessages)
+          else
+            .comments__footer.comments__footer--visitor
+              a.comments__button.button.button--colored(href='/login') Войти
+              .comments__registration
+                p.text.text--signature
+                  b.title.title--small Регистрация
+                  | Чтобы присоединиться к
+                  |                   переписке
+                  |                   нужно зарегистрироваться
+
