--- a/src/express/templates/new-post.pug
+++ b/src/express/templates/new-post.pug
@@ -10,7 +10,7 @@ block content
     section
       .popup.popup--new-publication.popup--anti
         .new-publication
-          form(method='POST')
+          form(method='POST' enctype='multipart/form-data')
             .new-publication__header
               h1 Новая публикация
               .new-publication__date-form
@@ -18,7 +18,7 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
-                    input#new-publication-date(type='text' name='createdDate' placeholder='2021-08-28')
+                    input#new-publication-date(type='text' name='createdDate' placeholder=new Date())
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             a.popup__button.button.button--popup-close(href='javascript:history.back()' aria-label='Закрыть окно')
               | Закрыть
