--- a/src/express/templates/all-categories.pug
+++ b/src/express/templates/all-categories.pug
@@ -5,17 +5,18 @@ block content
     section.main-page__category.category
       h1.category__title Категории
       .category__add-form
-        form(action='#' method='POST')
+        form(action='/categories' method='POST')
           input#add-form-add-category(type='text' name='add-category' placeholder='Новая категория')
           label(for='add-form-add-category')
             span.visually-hidden Добавить категорию
           button.category__button.button.button--category(type='submit') Добавить
+        +insertErrorMessage(validationMessages)
       ul.category__list
         each category in categories
           li.category__list-item
-            form(action='#' method='POST')
-              input#modify-form-category-1(type='text' name='category-1' value=category.name)
+            form(action=`/categories/${category.id}` method='POST')
+              input#modify-form-category-1(type='text' name='category' value=category.name)
               label(for='modify-form-category-1')
                 span.visually-hidden Редактировать категорию
-              button.category__button.button.button--category(type='submit') Сохранить
-              button.category__button.button.button--category(type='button') Удалить
+              button.category__button.button.button--category(type='submit' name="action" value="edit") Сохранить
+              button.category__button.button.button--category(type='submit' name="action" value="delete") Удалить
