--- a/src/express/templates/edit-post.pug
+++ b/src/express/templates/edit-post.pug
@@ -9,7 +9,7 @@ block content
     section
       .popup.popup--new-publication.popup--anti
         .new-publication
-          form(method='POST')
+          form(method='POST' enctype='multipart/form-data')
             .new-publication__header
               h1 Редактирование публикации
               .new-publication__date-form
