--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -6,6 +6,12 @@ block content
       const date = new Date(dateString);
       return date.toLocaleString();
     }
+    const sliceText = (announce) => {
+      if(announce.length > 100) {
+        return `${announce.slice(0, 100)}...`;
+      }
+      return announce;
+    }
   main.main-page
     h1.visually-hidden Главная страница личного блога Типотека
     p
@@ -18,87 +24,49 @@ block content
         h2.hot__name
           | Самое обсуждаемое
           span.hot__icon.hot__icon--fire
-        ul.hot__list
-          li.hot__list-item
-            a.hot__list-link(href='#')
-              | Билл Гейтс впервые за два года возглавил рейтинг самых богатых людей
-              | мира по версии Bloomberg
-              sup.hot__link-sup 12
-          li.hot__list-item
-            a.hot__list-link(href='#')
-              | Сервис для аналитики Telegram-чатов Combot попал под блокировку из-за
-              | информации на служебной
-              sup.hot__link-sup 15
-              |  странице
-          li.hot__list-item.hot__list-item--margin
-            a.hot__list-link(href='#')
-              | Модель Кайли Дженнер продаст 51% своей компании Kylie Cosmetics
-              | владельцу Factor за $600 млн
-              sup.hot__link-sup 52
-          li.hot__list-item.hot__list-item--end
-            a.hot__list-link(href='#')
-              | Tesla получила 146 тысяч предзаказов на электрический пикап Cybertruck
-              | за двое суток
-              sup.hot__link-sup 153
+        if popularArticles.length
+          ul.hot__list
+            each popularArticle in popularArticles
+              li.hot__list-item
+                a.hot__list-link(href=`/articles/${popularArticle.id}`) #{sliceText(popularArticle.announce)}
+                  sup.hot__link-sup #{popularArticle.commentsCount}
+        else
+          p(class="hot__empty") Здесь пока ничего нет...
       section.main-page__last.last
         h2.last__name
           | Последние комментарии
           span.last__icon.last__icon--cloud
-        ul.last__list
-          li.last__list-item
-            img.last__list-image(src='img/avatar-small-1.png' width='20' height='20' alt='Аватар пользователя')
-            b.last__list-name Анна Артамонова
-            a.last__list-link(href='#')
-              | Сервис аренды жилья Airbnb стал глобальным партнером Международного
-              | олимпийского комитета
-              | (МОК) на девять лет, в течение которых пройдет пять Олимпиад, в том числе в Токио в 2020 году.
-          li.last__list-item
-            img.last__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
-            b.last__list-name Александр Петров
-            a.last__list-link(href='#')
-              | Главреды «Дождя», Forbes и других СМИ попросили Роскомнадзор
-              | разъяснить штрафы за ссылки на
-              | сайты с матом
-          li.last__list-item.last__list-item--end
-            img.last__list-image(src='img/avatar-small-3.png' width='20' height='20' alt='Аватар пользователя')
-            b.last__list-name Игорь Шманский
-            a.last__list-link(href='#')
-              | Что-то все электрокары в последнее время все на одно лицо
-              | делаются))
+        if lastComments.length
+          ul.last__list
+            each comment in lastComments
+              li.last__list-item
+                img.last__list-image(src=`img/${comment.users.avatar}` width='20' height='20' alt='Аватар пользователя')
+                b.last__list-name #{comment.users.name} #{comment.users.surname}
+                a.last__list-link(href=`/articles/${comment.articleId}`)=sliceText(comment.text)
+        else
+          p(class="hot__empty") Здесь пока ничего нет...
     section.main-page__list.preview
       h2.visually-hidden Список превью статей
-      ul.preview__list
-        each article in articles
-          li.preview__item(class=article.image ? '' : 'preview__item--noimage')
-            ul.preview__breadcrumbs
-              each category in article.categories.slice(0, 4)
-                li.preview__breadcrumbs-item
-                  a.preview__breadcrumbs-link(href='/articles/category/' + category.id) #{category.name}
-            if article.image
-              .preview__background
-                img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.title)
-            time.preview__time(datetime=article.createdAt) #{formatDate(article.createdAt)}
-            h3.preview__name
-              a.preview__name-link(href='/articles/' + article.id) #{article.title}
-            p.preview__text #{article.announce}
-            a.preview__comment(href='/articles/' + article.id)
-              | Комментарии
-              span.preview__cloud
-              b.preview__comment-count #{article.comments.length}
+      if articles.length
+        ul.preview__list
+          each article in articles
+            li.preview__item(class=article.image ? '' : 'preview__item--noimage')
+              ul.preview__breadcrumbs
+                each category in article.categories.slice(0, 4)
+                  li.preview__breadcrumbs-item
+                    a.preview__breadcrumbs-link(href='/articles/category/' + category.id) #{category.name}
+              if article.image
+                .preview__background
+                  img.preview__background-image(src=`img/${article.image}` width='460' height='240' alt=article.title)
+              time.preview__time(datetime=article.createdAt) #{formatDate(article.createdAt)}
+              h3.preview__name
+                a.preview__name-link(href='/articles/' + article.id) #{article.title}
+              p.preview__text #{article.announce}
+              a.preview__comment(href='/articles/' + article.id)
+                | Комментарии
+                span.preview__cloud
+                b.preview__comment-count #{article.comments.length}
+      else
+        h2 Здесь пока пусто!
     .preview__toggle-wrapper
       +pagination(page, totalPages, 2, `?`)
-
-        li
-          a.pagination__button.button.button--backwards.button--disabled(href='#' aria-label='Страница назад') Назад
-        li.pagination__item.pagination__item--active
-          a(href='#') 1
-        li.pagination__item
-          a(href='#') 2
-        li.pagination__item
-          a(href='#') 3
-        li.pagination__item
-          a(href='#') 4
-        li.pagination__item
-          a(href='#') 5
-        li
-          a.pagination__button.button.button--forward(href='#' aria-label='Страница вперед') Вперед
