--- a/src/express/templates/partials/header-user.pug
+++ b/src/express/templates/partials/header-user.pug
@@ -2,12 +2,26 @@ header.header
   a.header__logo.logo(href='/')
     img.logo__image(src='/img/icons/logo-image-only.svg' alt='логотип Тайпотеки')
     span.logo__name Типотека
-  nav.header__nav
-    ul.header__nav-list
-      li.header__list-item
-        p #{user.name} #{user.surname}
-      li.header__list-item
-        a.header__exit(href='/logout') Выйти
-  a.header__avatar.avatar(href='/my')
-    img(src=`/img/${user.avatar}` alt='аватар пользователя')
+  if user.id === 1
+    a.button.button--colored.header__button-new(href='/articles/add') Новая запись
+    .header__dropdown
+      a.button.button--burger.header__burger(href='#') Открыть меню
+      ul.navigation.header__navigation
+        li.navigation__item
+          a(href='/my') Мои заметки
+        li.navigation__item
+          a(href='/my/comments') Комментарии
+        li.navigation__item
+          a(href='/categories') Категории
+        li.navigation__item
+          a(href='/logout') Выход
+  else
+    nav.header__nav
+      ul.header__nav-list
+        li.header__list-item
+          p #{user.name} #{user.surname}
+        li.header__list-item
+          a.header__exit(href='/logout') Выйти
+    a.header__avatar.avatar(href='/my')
+      img(src=`/img/${user.avatar}` alt='аватар пользователя')
   a.header__search.button.button--search(href='/search' aria-label='поиск по сайту')
